--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,15 +1,15 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\ 
 for details on configuring this project to bundle and minify static web assets. */
 body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 /* Carousel */
@@ -28,6 +28,20 @@ body {
     margin: 15px;
 }
 
+aside ul {
+    padding: 0px 10px 0px 10px;
+    margin: .5em 1em;
+}
+
+aside ul li {
+    list-style-type: none;
+    margin: .5em 1em;
+    padding: 0px 10px 0px 10px;
+}
+
+li {
+    padding: 0px 15px 5px 10px;
+}
 /* Hide/rearrange for smaller screens */
 @media screen and (max-width: 767px) {
     /* Hide captions */
@@ -35,3 +49,13 @@ body {
         display: none;
     }
 }
+
+th {
+    cursor: pointer;
+}
+
+h3 {
+    padding: 5px 5px 5px 0px;
+}
+
+
